--- a/demoDay copy/views/signup.ejs
+++ b/demoDay copy/views/signup.ejs
@@ -36,7 +36,12 @@
         </div>
         <div class="form-group">
             <label>What Make Is Your Car?</label>
-            <input type="text" class="form-control" name="make">
+            <select name="cars" id="make">
+            <option value="volvo">Volvo</option>
+            <option value="saab">Saab</option>
+            <option value="mercedes">Mercedes</option>
+            <option value="audi">Audi</option>
+        </select>
         </div>
         <div class="form-group">
             <label>What Model Is Your Car?</label>
