--- a/demoDay copy/views/index.ejs
+++ b/demoDay copy/views/index.ejs
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <script src="https://kit.fontawesome.com/8ea013bdc7.js" crossorigin="anonymous"></script>
     <link rel ="stylesheet" href="style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 
@@ -20,19 +21,19 @@
           <section class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav ms-auto">
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="#">Home</a>
+                <a class="nav-link active" aria-current="page" href="/">Home</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Resources</a>
+                <a href="/resources" class="nav-link">Must Have's</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Basic Car Maintenance</a>
+                <a href="/maintenance" class="nav-link">How To's</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href ="#">Scan</a>
+                <a href ="lights" class="nav-link">Why did a light on the dashboard appear?</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href ="#">Login</a>
+                <a href ="/login" class="nav-link" >Login</a>
               </li>
             </ul>
           </section>
@@ -52,25 +53,50 @@
           </section>
 
       </section>
+      <h3>Topics</h3>
+          <ul class="topics">
+          <% for(var i=0; i<topics.length; i++) {%>
+            <li class="topics">
+              <span><%= topics[i].topic %></span>
+              <span><%= topics[i].when %></span>
+              <span><%= topics[i].description %></span>
+              <span><i class="fa fa-thumbs-up" aria-hidden="true"></i></span>
+              <span><i class="fa fa-thumbs-down" aria-hidden="true"></i></span>
+              <span><i class="fa fa-trash" aria-hidden="true"></i></span>
+
+
+              <% const responses= topics[i].response
+              for(var j=0; j<responses.length; j++) {%>
+                <li class="responses">
+                  <span><%= responses[j].when %></span>
+                  <span><%= responses[j].description %></span>
+                  <span><i class="fa fa-thumbs-up" aria-hidden="true"></i></span>
+                  <span><i class="fa fa-thumbs-down" aria-hidden="true"></i></span>
+                  <span><i class="fa fa-trash" aria-hidden="true"></i></span>
+                  <% } %>
+              <h2>Respond</h2>
+              <form action="createResponse" method="POST">
+                <input type="hidden" name="topicId" value="<%= topics[i]._id %>"></input>
+                <!-- <input type="text" name="response" placeholder="Your Response">Response</input> -->
+                <textarea name ="description"></textarea>
+                <button type="submit">Post Response</button>
+        
+              </form>
+
+            </li>
+          <% } %>
+          </ul>
+
+
+
+        <h2>Create A New Topic</h2>
+      <form action="createTopic" method="POST">
+        <input type="text" name="topic" placeholder="Topic Name">Topic</input>
+        <textarea name ="description"></textarea>
+        <button type="submit">Create Topic</button>
+
+      </form>
       
-    <!-- <section class="container">
-        <section class="subforum">
-            <section class="title">
-                <h1>Community Discussion Board</h1>
-            </section>
-            <section class= "subforum-row">
-                <section class="subforum-icon">
-                    <i class = "fa fa-car"></i>
-                </section>
-                <section class ="subforum-description">
-                    <h1><a href="">Description Title:</a></h1>
-                    <p>Description content:</p>
-                </section>
-                <section class="subforum-stats">
-                    <span>24 posts | 15 topics </span>
-                </section>
-                <section class="subforum-info">
-                    <b><a href="">Last Post</a></b> by <a href= ""> -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 <script src ="main.js"></script>  
 </body>
