--- a/demoDay copy/views/resources.ejs
+++ b/demoDay copy/views/resources.ejs
@@ -5,10 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link rel="stylesheet" href="main.css">
+    <script src="https://accounts.google.com/gsi/client" async defer></script>
     <title>Resources</title>
 </head>
 <body>
-    <nav class="navbar navbar-expand-sm navbar-dark bg-dark py-3">
+      <nav class="navbar navbar-expand-sm navbar-dark bg-dark py-3">
         <section class="container-fluid">
           <a class="navbar-brand" href="#">Clutch</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -17,37 +19,181 @@
           <section class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav ms-auto">
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="/index.ejs">Home</a>
+                <a class="nav-link active" aria-current="page" href="/">Home</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Resources</a>
+                <a href="/resources" class="nav-link">Must Have's</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Basic Car Maintenance</a>
+                <a href="/maintenance" class="nav-link">How To's</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href ="#">Scan</a>
+                <a href ="lights" class="nav-link">Why did a light on the dashboard appear?</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href ="#">Login</a>
+                <a href ="/login" class="nav-link" >Login</a>
               </li>
             </ul>
           </section>
         </section>
       </nav>
-    <h1>Resources</h1>
-    <h2>Tire Trouble</h2>
+      <section class =" topSection bg-dark.text-light.p-5.text-center text-sm-start">
+        <section class ="container">
+            <section class="d-sm-flex align-items-center justify-content-between">
+                <section>
 
     <p> Tire trouble seems to always happen at the most unexpected time so it's important to always stay prepared. Below are some go to tools to make sure your always prepared for the unexpected. </p>
-    <div class="row row-cols-1 row-cols-md-4 g-4">
-    <div class="card h-100 mx-3" style="width: 16rem;">
-        <img src="..//fix-a-flat.jpeg" class="card-img-top" alt="...">
-        <div class="card-body">
-          <h5 class="card-title">Fix-A-Flat</h5>
-          <p class="card-text">I personally always keep a bottle. Fix-a-flat is used for emergency tire repair.</p>
-          <a href="https://www.amazon.com/Fix-Flat-S60420-Inflator-Eco-Friendly/dp/B01FX5TKE8/ref=sr_1_1?crid=27RYES5EPSMTF&keywords=fix+a+flat&qid=1636340915&sprefix=fix+a+%2Caps%2C188&sr=8-1" class="btn btn-primary">Purchase Here</a>
-          <a href="https://www.youtube.com/watch?v=GbNQSbqBuvs" class="btn btn-primary mt-3">Watch How To Use</a>
+
+
+    <section class="bg-light pt-5 pb-5 shadow-sm">
+      <div class="container">
+        <div class="row pt-5">
+          <div class="col-12">
+            <h3 class="text-uppercase border-bottom mb-4">Must Have's</h3>
+          </div>
         </div>
+        <div class="row">
+          <!--ADD CLASSES HERE d-flex align-items-stretch-->
+          <div class="col-lg-4 mb-3 d-flex align-items-stretch">
+            <div class="card">
+              <img src="https://i.postimg.cc/28PqLLQC/dotonburi-canal-osaka-japan-700.jpg" class="card-img-top" alt="Card Image">
+              <div class="card-body d-flex flex-column">
+                <h5 class="card-title">Dōtonbori Canal</h5>
+                <p class="card-text mb-4">Is a manmade waterway dug in the early 1600's and now displays many landmark commercial locals and vivid neon signs.</p>
+                <a href="#" class="btn btn-primary mt-auto align-self-start">Book now</a>
+              </div>
+            </div>
+          </div>
+          <!--ADD CLASSES HERE d-flex align-items-stretch-->
+          <div class="col-lg-4 mb-3 d-flex align-items-stretch">
+            <div class="card">
+              <img src="https://i.postimg.cc/4xVY64PV/porto-timoni-double-beach-corfu-greece-700.jpg" class="card-img-top" alt="Card Image">
+              <div class="card-body d-flex flex-column">
+                <h5 class="card-title">Porto Timoni Double Beach</h5>
+                <p class="card-text mb-4">Near Afionas village, on the west coast of Corfu island. The two beaches form two unique bays. The turquoise color of the sea contrasts to the high green hills surrounding it.</p>
+                <a href="#" class="btn btn-primary mt-auto align-self-start">Book now</a>
+              </div>
+            </div>
+          </div>
+          <!--ADD CLASSES HERE d-flex align-items-stretch-->
+          <div class="col-lg-4 mb-3 d-flex align-items-stretch">
+            <div class="card">
+              <img src="https://i.postimg.cc/TYyLPJWk/tritons-fountain-valletta-malta-700.jpg" class="card-img-top" alt="Card Image">
+              <div class="card-body d-flex flex-column">
+                <h5 class="card-title">Tritons Fountain</h5>
+                <p class="card-text mb-4">Located just outside the City Gate of Valletta, Malta. It consists of three bronze Tritons holding up a large basin, balanced on a concentric base built out of concrete and clad in travertine slabs.</p>
+                <a href="#" class="btn btn-primary mt-auto align-self-start">Book now</a>
+              </div>
+            </div>
+          </div>
+          <!--ADD CLASSES HERE d-flex align-items-stretch-->
+          <div class="col-lg-4 mb-3 d-flex align-items-stretch">
+            <div class="card">
+              <img src="https://i.postimg.cc/28PqLLQC/dotonburi-canal-osaka-japan-700.jpg" class="card-img-top" alt="Card Image">
+              <div class="card-body d-flex flex-column">
+                <h5 class="card-title">Dōtonbori Canal</h5>
+                <p class="card-text mb-4">Is a manmade waterway dug in the early 1600's and now displays many landmark commercial locals and vivid neon signs.</p>
+                <a href="#" class="btn btn-primary mt-auto align-self-start">Book now</a>
+              </div>
+            </div>
+          </div>
+          <!--ADD CLASSES HERE d-flex align-items-stretch-->
+          <div class="col-lg-4 mb-3 d-flex align-items-stretch">
+            <div class="card">
+              <img src="https://i.postimg.cc/4xVY64PV/porto-timoni-double-beach-corfu-greece-700.jpg" class="card-img-top" alt="Card Image">
+              <div class="card-body d-flex flex-column">
+                <h5 class="card-title">Porto Timoni Double Beach</h5>
+                <p class="card-text mb-4">Near Afionas village, on the west coast of Corfu island. The two beaches form two unique bays. The turquoise color of the sea contrasts to the high green hills surrounding it.</p>
+                <a href="#" class="btn btn-primary mt-auto align-self-start">Book now</a>
+              </div>
+            </div>
+          </div>
+          <!--ADD CLASSES HERE d-flex align-items-stretch-->
+          <div class="col-lg-4 mb-3 d-flex align-items-stretch">
+            <div class="card">
+              <img src="https://i.postimg.cc/TYyLPJWk/tritons-fountain-valletta-malta-700.jpg" class="card-img-top" alt="Card Image">
+              <div class="card-body d-flex flex-column">
+                <h5 class="card-title">Tritons Fountain</h5>
+                <p class="card-text mb-4">Located just outside the City Gate of Valletta, Malta. It consists of three bronze Tritons holding up a large basin, balanced on a concentric base built out of concrete and clad in travertine slabs.</p>
+                <a href="#" class="btn btn-primary mt-auto align-self-start">Book now</a>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-4 mb-3 d-flex align-items-stretch">
+            <div class="card">
+              <img src="https://i.postimg.cc/TYyLPJWk/tritons-fountain-valletta-malta-700.jpg" class="card-img-top" alt="Card Image">
+              <div class="card-body d-flex flex-column">
+                <h5 class="card-title">Tritons Fountain</h5>
+                <p class="card-text mb-4">Located just outside the City Gate of Valletta, Malta. It consists of three bronze Tritons holding up a large basin, balanced on a concentric base built out of concrete and clad in travertine slabs.</p>
+                <a href="#" class="btn btn-primary mt-auto align-self-start">Book now</a>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-4 mb-3 d-flex align-items-stretch">
+            <div class="card">
+              <img src="https://i.postimg.cc/TYyLPJWk/tritons-fountain-valletta-malta-700.jpg" class="card-img-top" alt="Card Image">
+              <div class="card-body d-flex flex-column">
+                <h5 class="card-title">Tritons Fountain</h5>
+                <p class="card-text mb-4">Located just outside the City Gate of Valletta, Malta. It consists of three bronze Tritons holding up a large basin, balanced on a concentric base built out of concrete and clad in travertine slabs.</p>
+                <a href="#" class="btn btn-primary mt-auto align-self-start">Book now</a>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-4 mb-3 d-flex align-items-stretch">
+            <div class="card">
+              <img src="https://i.postimg.cc/TYyLPJWk/tritons-fountain-valletta-malta-700.jpg" class="card-img-top" alt="Card Image">
+              <div class="card-body d-flex flex-column">
+                <h5 class="card-title">Tritons Fountain</h5>
+                <p class="card-text mb-4">Located just outside the City Gate of Valletta, Malta. It consists of three bronze Tritons holding up a large basin, balanced on a concentric base built out of concrete and clad in travertine slabs.</p>
+                <a href="#" class="btn btn-primary mt-auto align-self-start">Book now</a>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-4 mb-3 d-flex align-items-stretch">
+            <div class="card">
+              <img src="https://i.postimg.cc/TYyLPJWk/tritons-fountain-valletta-malta-700.jpg" class="card-img-top" alt="Card Image">
+              <div class="card-body d-flex flex-column">
+                <h5 class="card-title">Tritons Fountain</h5>
+                <p class="card-text mb-4">Located just outside the City Gate of Valletta, Malta. It consists of three bronze Tritons holding up a large basin, balanced on a concentric base built out of concrete and clad in travertine slabs.</p>
+                <a href="#" class="btn btn-primary mt-auto align-self-start">Book now</a>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-4 mb-3 d-flex align-items-stretch">
+            <div class="card">
+              <img src="https://i.postimg.cc/TYyLPJWk/tritons-fountain-valletta-malta-700.jpg" class="card-img-top" alt="Card Image">
+              <div class="card-body d-flex flex-column">
+                <h5 class="card-title">Tritons Fountain</h5>
+                <p class="card-text mb-4">Located just outside the City Gate of Valletta, Malta. It consists of three bronze Tritons holding up a large basin, balanced on a concentric base built out of concrete and clad in travertine slabs.</p>
+                <a href="#" class="btn btn-primary mt-auto align-self-start">Book now</a>
+              </div>
+            </div>
+          </div>
+          
+        </div>
+      </div>
+    </section>
+
+
+    <div class="container">
+      <div class="row">
+          <div class="col-lg-4 d-flex align-items-stretch">
+
+            <div class="card h-100 mx-3" style="width: 16rem;">
+              <img src="..//fix-a-flat.jpeg" class="card-img-top" alt="...">
+              <div class="card-body">
+                <h5 class="card-title">Fix-A-Flat</h5>
+                <p class="card-text">I personally always keep a bottle. Fix-a-flat is used for emergency tire repair.</p>
+                <a href="https://www.amazon.com/Fix-Flat-S60420-Inflator-Eco-Friendly/dp/B01FX5TKE8/ref=sr_1_1?crid=27RYES5EPSMTF&keywords=fix+a+flat&qid=1636340915&sprefix=fix+a+%2Caps%2C188&sr=8-1" class="btn btn-primary">Purchase Here</a>
+                <a href="https://www.youtube.com/watch?v=GbNQSbqBuvs" class="btn btn-primary mt-3">Watch How To Use</a>
+              </div>
+            </div>
+          <!--CARD HERE-->
+          </div>
+      </div>
+  </div>
+    <div class="row row-cols-1 row-cols-md-4 g-4">
+  
       </div>
       <div class="card h-100 mx-3" style="width: 16rem;">
         <img src="..//slimeairpump.jpeg" class="card-img-top" alt="...">
@@ -112,6 +258,11 @@
         <li>AAA or 24hr roadside assistance</li>
         <li>gas can</li>
     </ul>
+
+  </section>
+</section>
+</section>
+</section>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script> 
 </body>
 </html>
