--- a/demoDay copy/views/index.ejs
+++ b/demoDay copy/views/index.ejs
@@ -57,12 +57,9 @@
           <ul class="topics">
           <% for(var i=0; i<topics.length; i++) {%>
             <li class="topics">
-              <span><%= topics[i].topic %></span>
+              <p>Topic: <%= topics[i].topic %></p>
               <span><%= topics[i].when %></span>
-              <span><%= topics[i].description %></span>
-              <span><i class="fa fa-thumbs-up" aria-hidden="true"></i></span>
-              <span><i class="fa fa-thumbs-down" aria-hidden="true"></i></span>
-              <span><i class="fa fa-trash" aria-hidden="true"></i></span>
+              <span class="description"><%= topics[i].description %></span>
 
 
               <% const responses= topics[i].response
@@ -70,33 +67,35 @@
                 <li class="responses">
                   <span><%= responses[j].when %></span>
                   <span><%= responses[j].description %></span>
-                  <span><i class="fa fa-thumbs-up" aria-hidden="true"></i></span>
-                  <span><i class="fa fa-thumbs-down" aria-hidden="true"></i></span>
-                  <span><i class="fa fa-trash" aria-hidden="true"></i></span>
                   <% } %>
-              <h2>Respond</h2>
+                  <section class="big">
+                  <section class="hidden">
               <form action="createResponse" method="POST">
-                <input type="hidden" name="topicId" value="<%= topics[i]._id %>"></input>
+                <input type="hidden" name="topicId" placeholder="Response" value="<%= topics[i]._id %>"></input>
                 <!-- <input type="text" name="response" placeholder="Your Response">Response</input> -->
-                <textarea name ="description"></textarea>
+                <textarea name ="description"></textarea><br>
                 <button type="submit">Post Response</button>
         
               </form>
+            </section>
+         
 
             </li>
           <% } %>
           </ul>
 
 
-
+<section class="textArea">
         <h2>Create A New Topic</h2>
       <form action="createTopic" method="POST">
-        <input type="text" name="topic" placeholder="Topic Name">Topic</input>
-        <textarea name ="description"></textarea>
+
+        <input id="topic" type="text" name="topic" placeholder="Topic Name"></input><br>
+        <textarea name ="description"></textarea><br>
         <button type="submit">Create Topic</button>
 
       </form>
-      
+    </section>
+  </section>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 <script src ="main.js"></script>  
 </body>
