--- a/demoDay copy/views/resources.ejs
+++ b/demoDay copy/views/resources.ejs
@@ -41,10 +41,6 @@
         <section class ="container">
             <section class="d-sm-flex align-items-center justify-content-between">
                 <section>
-
-    <p> Tire trouble seems to always happen at the most unexpected time so it's important to always stay prepared. Below are some go to tools to make sure your always prepared for the unexpected. </p>
-
-
     <section class="bg-light pt-5 pb-5 shadow-sm">
       <div class="container">
         <div class="row pt-5">
@@ -56,213 +52,75 @@
           <!--ADD CLASSES HERE d-flex align-items-stretch-->
           <div class="col-lg-4 mb-3 d-flex align-items-stretch">
             <div class="card">
-              <img src="https://i.postimg.cc/28PqLLQC/dotonburi-canal-osaka-japan-700.jpg" class="card-img-top" alt="Card Image">
+              <img src="..//fix-a-flat.jpeg" class="card-img-top" alt="Card Image">
               <div class="card-body d-flex flex-column">
-                <h5 class="card-title">Dōtonbori Canal</h5>
-                <p class="card-text mb-4">Is a manmade waterway dug in the early 1600's and now displays many landmark commercial locals and vivid neon signs.</p>
-                <a href="#" class="btn btn-primary mt-auto align-self-start">Book now</a>
-              </div>
-            </div>
-          </div>
-          <!--ADD CLASSES HERE d-flex align-items-stretch-->
-          <div class="col-lg-4 mb-3 d-flex align-items-stretch">
-            <div class="card">
-              <img src="https://i.postimg.cc/4xVY64PV/porto-timoni-double-beach-corfu-greece-700.jpg" class="card-img-top" alt="Card Image">
-              <div class="card-body d-flex flex-column">
-                <h5 class="card-title">Porto Timoni Double Beach</h5>
-                <p class="card-text mb-4">Near Afionas village, on the west coast of Corfu island. The two beaches form two unique bays. The turquoise color of the sea contrasts to the high green hills surrounding it.</p>
-                <a href="#" class="btn btn-primary mt-auto align-self-start">Book now</a>
-              </div>
-            </div>
-          </div>
-          <!--ADD CLASSES HERE d-flex align-items-stretch-->
-          <div class="col-lg-4 mb-3 d-flex align-items-stretch">
-            <div class="card">
-              <img src="https://i.postimg.cc/TYyLPJWk/tritons-fountain-valletta-malta-700.jpg" class="card-img-top" alt="Card Image">
-              <div class="card-body d-flex flex-column">
-                <h5 class="card-title">Tritons Fountain</h5>
-                <p class="card-text mb-4">Located just outside the City Gate of Valletta, Malta. It consists of three bronze Tritons holding up a large basin, balanced on a concentric base built out of concrete and clad in travertine slabs.</p>
-                <a href="#" class="btn btn-primary mt-auto align-self-start">Book now</a>
-              </div>
-            </div>
-          </div>
-          <!--ADD CLASSES HERE d-flex align-items-stretch-->
-          <div class="col-lg-4 mb-3 d-flex align-items-stretch">
-            <div class="card">
-              <img src="https://i.postimg.cc/28PqLLQC/dotonburi-canal-osaka-japan-700.jpg" class="card-img-top" alt="Card Image">
-              <div class="card-body d-flex flex-column">
-                <h5 class="card-title">Dōtonbori Canal</h5>
-                <p class="card-text mb-4">Is a manmade waterway dug in the early 1600's and now displays many landmark commercial locals and vivid neon signs.</p>
-                <a href="#" class="btn btn-primary mt-auto align-self-start">Book now</a>
-              </div>
-            </div>
-          </div>
-          <!--ADD CLASSES HERE d-flex align-items-stretch-->
-          <div class="col-lg-4 mb-3 d-flex align-items-stretch">
-            <div class="card">
-              <img src="https://i.postimg.cc/4xVY64PV/porto-timoni-double-beach-corfu-greece-700.jpg" class="card-img-top" alt="Card Image">
-              <div class="card-body d-flex flex-column">
-                <h5 class="card-title">Porto Timoni Double Beach</h5>
-                <p class="card-text mb-4">Near Afionas village, on the west coast of Corfu island. The two beaches form two unique bays. The turquoise color of the sea contrasts to the high green hills surrounding it.</p>
-                <a href="#" class="btn btn-primary mt-auto align-self-start">Book now</a>
-              </div>
-            </div>
-          </div>
-          <!--ADD CLASSES HERE d-flex align-items-stretch-->
-          <div class="col-lg-4 mb-3 d-flex align-items-stretch">
-            <div class="card">
-              <img src="https://i.postimg.cc/TYyLPJWk/tritons-fountain-valletta-malta-700.jpg" class="card-img-top" alt="Card Image">
-              <div class="card-body d-flex flex-column">
-                <h5 class="card-title">Tritons Fountain</h5>
-                <p class="card-text mb-4">Located just outside the City Gate of Valletta, Malta. It consists of three bronze Tritons holding up a large basin, balanced on a concentric base built out of concrete and clad in travertine slabs.</p>
-                <a href="#" class="btn btn-primary mt-auto align-self-start">Book now</a>
-              </div>
-            </div>
-          </div>
-          <div class="col-lg-4 mb-3 d-flex align-items-stretch">
-            <div class="card">
-              <img src="https://i.postimg.cc/TYyLPJWk/tritons-fountain-valletta-malta-700.jpg" class="card-img-top" alt="Card Image">
-              <div class="card-body d-flex flex-column">
-                <h5 class="card-title">Tritons Fountain</h5>
-                <p class="card-text mb-4">Located just outside the City Gate of Valletta, Malta. It consists of three bronze Tritons holding up a large basin, balanced on a concentric base built out of concrete and clad in travertine slabs.</p>
-                <a href="#" class="btn btn-primary mt-auto align-self-start">Book now</a>
-              </div>
-            </div>
-          </div>
-          <div class="col-lg-4 mb-3 d-flex align-items-stretch">
-            <div class="card">
-              <img src="https://i.postimg.cc/TYyLPJWk/tritons-fountain-valletta-malta-700.jpg" class="card-img-top" alt="Card Image">
-              <div class="card-body d-flex flex-column">
-                <h5 class="card-title">Tritons Fountain</h5>
-                <p class="card-text mb-4">Located just outside the City Gate of Valletta, Malta. It consists of three bronze Tritons holding up a large basin, balanced on a concentric base built out of concrete and clad in travertine slabs.</p>
-                <a href="#" class="btn btn-primary mt-auto align-self-start">Book now</a>
-              </div>
-            </div>
-          </div>
-          <div class="col-lg-4 mb-3 d-flex align-items-stretch">
-            <div class="card">
-              <img src="https://i.postimg.cc/TYyLPJWk/tritons-fountain-valletta-malta-700.jpg" class="card-img-top" alt="Card Image">
-              <div class="card-body d-flex flex-column">
-                <h5 class="card-title">Tritons Fountain</h5>
-                <p class="card-text mb-4">Located just outside the City Gate of Valletta, Malta. It consists of three bronze Tritons holding up a large basin, balanced on a concentric base built out of concrete and clad in travertine slabs.</p>
-                <a href="#" class="btn btn-primary mt-auto align-self-start">Book now</a>
-              </div>
-            </div>
-          </div>
-          <div class="col-lg-4 mb-3 d-flex align-items-stretch">
-            <div class="card">
-              <img src="https://i.postimg.cc/TYyLPJWk/tritons-fountain-valletta-malta-700.jpg" class="card-img-top" alt="Card Image">
-              <div class="card-body d-flex flex-column">
-                <h5 class="card-title">Tritons Fountain</h5>
-                <p class="card-text mb-4">Located just outside the City Gate of Valletta, Malta. It consists of three bronze Tritons holding up a large basin, balanced on a concentric base built out of concrete and clad in travertine slabs.</p>
-                <a href="#" class="btn btn-primary mt-auto align-self-start">Book now</a>
-              </div>
-            </div>
-          </div>
-          <div class="col-lg-4 mb-3 d-flex align-items-stretch">
-            <div class="card">
-              <img src="https://i.postimg.cc/TYyLPJWk/tritons-fountain-valletta-malta-700.jpg" class="card-img-top" alt="Card Image">
-              <div class="card-body d-flex flex-column">
-                <h5 class="card-title">Tritons Fountain</h5>
-                <p class="card-text mb-4">Located just outside the City Gate of Valletta, Malta. It consists of three bronze Tritons holding up a large basin, balanced on a concentric base built out of concrete and clad in travertine slabs.</p>
-                <a href="#" class="btn btn-primary mt-auto align-self-start">Book now</a>
-              </div>
-            </div>
-          </div>
-          
-        </div>
-      </div>
-    </section>
-
-
-    <div class="container">
-      <div class="row">
-          <div class="col-lg-4 d-flex align-items-stretch">
-
-            <div class="card h-100 mx-3" style="width: 16rem;">
-              <img src="..//fix-a-flat.jpeg" class="card-img-top" alt="...">
-              <div class="card-body">
                 <h5 class="card-title">Fix-A-Flat</h5>
-                <p class="card-text">I personally always keep a bottle. Fix-a-flat is used for emergency tire repair.</p>
-                <a href="https://www.amazon.com/Fix-Flat-S60420-Inflator-Eco-Friendly/dp/B01FX5TKE8/ref=sr_1_1?crid=27RYES5EPSMTF&keywords=fix+a+flat&qid=1636340915&sprefix=fix+a+%2Caps%2C188&sr=8-1" class="btn btn-primary">Purchase Here</a>
-                <a href="https://www.youtube.com/watch?v=GbNQSbqBuvs" class="btn btn-primary mt-3">Watch How To Use</a>
+                <p class="card-text mb-4">Fix-a-Flat is designed to seal small tire punctures in seconds and provide enough inflation to lift the rim off the ground.</p>
+                <a href="https://www.amazon.com/Fix-Flat-S60420-Inflator-Eco-Friendly/dp/B01FX5TKE8/ref=sr_1_1?crid=27RYES5EPSMTF&keywords=fix+a+flat&qid=1636340915&sprefix=fix+a+%2Caps%2C188&sr=8-1" class="btn btn-primary mt-auto align-self-start">Purchase Here</a>
               </div>
             </div>
-          <!--CARD HERE-->
           </div>
-      </div>
-  </div>
-    <div class="row row-cols-1 row-cols-md-4 g-4">
-  
-      </div>
-      <div class="card h-100 mx-3" style="width: 16rem;">
-        <img src="..//slimeairpump.jpeg" class="card-img-top" alt="...">
-        <div class="card-body">
-          <h5 class="card-title">Portable Tire Inflator</h5>
-          <p class="card-text">At times getting to the the nearest air pump when a tire is flat is unsafe. Because of that I always keep one of these.</p>
-          <a href="https://www.amazon.com/Slime-40050-Inflator-Portable-Compressor/dp/B074X4XFGS/ref=sr_1_15?crid=1MUJQEL7H4SBT&keywords=car+tire+inflator&qid=1636344111&s=automotive&sprefix=car+tire+%2Caps%2C177&sr=1-15" class="btn btn-primary">Purchase Here</a>
-          <a href="https://www.youtube.com/watch?v=HTCSpx6f9tY" class="btn btn-primary mt-3">Watch How To Use</a>
-        </div>
-      </div>
-    <div class="card h-100 mx-3" style="width: 16rem;">
-        <img src="..//slimeairpump.jpeg" class="card-img-top" alt="...">
-        <div class="card-body">
-          <h5 class="card-title">Jack</h5>
-          <p class="card-text">Air pump on the go</p>
-          <a href="https://www.amazon.com/Slime-40050-Inflator-Portable-Compressor/dp/B074X4XFGS/ref=sr_1_15?crid=1MUJQEL7H4SBT&keywords=car+tire+inflator&qid=1636344111&s=automotive&sprefix=car+tire+%2Caps%2C177&sr=1-15" class="btn btn-primary">Purchase Here</a>
-        </div>
-      </div>
-    </div>
-    <h2>Battery Problems</h2>
-    <p></p>
-    <div class="card h-100 mx-3" style="width: 16rem;">
-        <img src="..//slimeairpump.jpeg" class="card-img-top" alt="...">
-        <div class="card-body">
-          <h5 class="card-title">Jumper Cables</h5>
-          <p class="card-text">Air pump on the go</p>
-          <a href="https://www.amazon.com/Slime-40050-Inflator-Portable-Compressor/dp/B074X4XFGS/ref=sr_1_15?crid=1MUJQEL7H4SBT&keywords=car+tire+inflator&qid=1636344111&s=automotive&sprefix=car+tire+%2Caps%2C177&sr=1-15" class="btn btn-primary">Purchase Here</a>
-        </div>
-      </div>
+          <!--ADD CLASSES HERE d-flex align-items-stretch-->
+          <div class="col-lg-4 mb-3 d-flex align-items-stretch">
+            <div class="card">
+              <img src="..//slimeairpump.jpeg" class="card-img-top" alt="Card Image">
+              <div class="card-body d-flex flex-column">
+                <h5 class="card-title">Portable Tire Inflator</h5>
+                <p class="card-text mb-4">At times getting to the the nearest air pump when a tire is flat is unsafe. Because of that I always keep one of these.</p>
+                <a href="https://www.amazon.com/Slime-40050-Inflator-Portable-Compressor/dp/B074X4XFGS/ref=sr_1_15?crid=1MUJQEL7H4SBT&keywords=car+tire+inflator&qid=1636344111&s=automotive&sprefix=car+tire+%2Caps%2C177&sr=1-15" class="btn btn-primary mt-auto align-self-start">Purchase Here</a>
+              </div>
+            </div>
+          </div>
+          <!--ADD CLASSES HERE d-flex align-items-stretch-->
+          <div class="col-lg-4 mb-3 d-flex align-items-stretch">
+            <div class="card">
+              <img src="cables.jpeg" class="card-img-top" alt="Card Image">
+              <div class="card-body d-flex flex-column">
+                <h5 class="card-title">Jumper Cables</h5>
+                <p class="card-text mb-4">Jumper cables are important to have incase your battery dies.</p>
+                <a href="https://www.amazon.com/THIKPO-G616-Battery-Booster-Gasoline/dp/B0924JMQF5/ref=sxin_13_pa_sp_search_thematic_sspa?crid=F3UKU4QQDEYZ&cv_ct_cx=jumper+cables&keywords=jumper+cables&pd_rd_i=B0924JMQF5&pd_rd_r=a5680a82-9595-4b34-a023-7d99e100bd45&pd_rd_w=hifTN&pd_rd_wg=9enAg&pf_rd_p=69e6ba92-4b2b-4486-a0ef-136583f2d22c&pf_rd_r=03Q4TNABPBAK6AS8JR0E&qid=1637569576&sprefix=jumper+%2Caps%2C171&sr=1-1-a73d1c8c-2fd2-4f19-aa41-2df022bcb241-spons&psc=1&spLa=ZW5jcnlwdGVkUXVhbGlmaWVyPUFCNDlJU0Y0V0k3WVkmZW5jcnlwdGVkSWQ9QTA4NTc5NzkxRE1BVFoxNDZFN0ZOJmVuY3J5cHRlZEFkSWQ9QTAyMDA2NDEzMFJZSDNUVzFQTzgwJndpZGdldE5hbWU9c3Bfc2VhcmNoX3RoZW1hdGljJmFjdGlvbj1jbGlja1JlZGlyZWN0JmRvTm90TG9nQ2xpY2s9dHJ1ZQ==" class="btn btn-primary mt-auto align-self-start">Purchase Here</a>
+              </div>
+            </div>
+          </div>
+          <!--ADD CLASSES HERE d-flex align-items-stretch-->
+          <div class="col-lg-4 mb-3 d-flex align-items-stretch">
+            <div class="card">
+              <img src="gasCan.jpeg" class="card-img-top" alt="Card Image">
+              <div class="card-body d-flex flex-column">
+                <h5 class="card-title">Gas Can</h5>
+                <p class="card-text mb-4">Running low on gas may happen. It's great to have a gas can handy.</p>
+                <a href="https://www.walmart.com/ip/Scepter-2-Gallon-SmartControl-Gas-Can-FR1G201-Red/581174183?athbdg=L1200" class="btn btn-primary mt-auto align-self-start">Purchase Here</a>
+              </div>
+            </div>
+          </div>
+          <!--ADD CLASSES HERE d-flex align-items-stretch-->
+          <div class="col-lg-4 mb-3 d-flex align-items-stretch">
+            <div class="card">
+              <img src="jack.jpeg" class="card-img-top" alt="Card Image">
+              <div class="card-body d-flex flex-column">
+                <h5 class="card-title">Jack</h5>
+                <p class="card-text mb-4">Jacks are used for lifting your car for things such as a flat tires.</p>
+                <a href="https://www.amazon.com/LEAD-BRAND-Scissor-Capacity-Strength/dp/B07CZGTXYH/ref=sr_1_15_sspa?crid=3DOZXTY0D0KL6&keywords=jack+for+car&qid=1637571172&s=automotive&sprefix=jack+%2Cautomotive%2C183&sr=1-15-spons&psc=1&spLa=ZW5jcnlwdGVkUXVhbGlmaWVyPUExNURMQjRYTjY3Q0JLJmVuY3J5cHRlZElkPUEwODEyNDk3MlEzS0w3MjZINlNQUCZlbmNyeXB0ZWRBZElkPUEwNzUwMzQ2RlZHWlhWRzA4TzRSJndpZGdldE5hbWU9c3BfbXRmJmFjdGlvbj1jbGlja1JlZGlyZWN0JmRvTm90TG9nQ2xpY2s9dHJ1ZQ==" class="btn btn-primary mt-auto align-self-start">Purchase Here</a>
+              </div>
+            </div>
+          </div>
+          <!--ADD CLASSES HERE d-flex align-items-stretch-->
+          <div class="col-lg-4 mb-3 d-flex align-items-stretch">
+            <div class="card">
+              <img src="emergency.jpeg" class="card-img-top" alt="Card Image">
+              <div class="card-body d-flex flex-column">
+                <h5 class="card-title">Emergency Kit</h5>
+                <p class="card-text mb-4">Emergencys tend to happen when we least expect it.This kit will ensure that you are always prepared.</p>
+                <a href="https://www.amazon.com/127-Pieces-Roadside-Emergency-Include-Triangle/dp/B08BXJ27WH/ref=sr_1_1_sspa?keywords=emergency+kit+for+car&qid=1637572236&sr=8-1-spons&psc=1&spLa=ZW5jcnlwdGVkUXVhbGlmaWVyPUEzS0kwV0taREJTWEc5JmVuY3J5cHRlZElkPUEwMjY0OTAzMTRVRUFXVThTWjNTRSZlbmNyeXB0ZWRBZElkPUEwNzI5NDA5MTJPSVk0WDhPQ0FJJndpZGdldE5hbWU9c3BfYXRmJmFjdGlvbj1jbGlja1JlZGlyZWN0JmRvTm90TG9nQ2xpY2s9dHJ1ZQ==" class="btn btn-primary mt-auto align-self-start">Purchase Here</a>
+              </div>
+            </div>
+          </div>
 
-    <div class="card h-100 mx-3" style="width: 16rem;">
-        <img src="..//slimeairpump.jpeg" class="card-img-top" alt="...">
-        <div class="card-body">
-          <h5 class="card-title">Portable Tire Inflator</h5>
-          <p class="card-text">Air pump on the go</p>
-          <a href="https://www.amazon.com/Slime-40050-Inflator-Portable-Compressor/dp/B074X4XFGS/ref=sr_1_15?crid=1MUJQEL7H4SBT&keywords=car+tire+inflator&qid=1636344111&s=automotive&sprefix=car+tire+%2Caps%2C177&sr=1-15" class="btn btn-primary">Purchase Here</a>
-        </div>
-      </div>
-    <div class="card h-100 mx-3" style="width: 16rem;">
-        <img src="..//slimeairpump.jpeg" class="card-img-top" alt="...">
-        <div class="card-body">
-          <h5 class="card-title">Portable Tire Inflator</h5>
-          <p class="card-text">Air pump on the go</p>
-          <a href="https://www.amazon.com/Slime-40050-Inflator-Portable-Compressor/dp/B074X4XFGS/ref=sr_1_15?crid=1MUJQEL7H4SBT&keywords=car+tire+inflator&qid=1636344111&s=automotive&sprefix=car+tire+%2Caps%2C177&sr=1-15" class="btn btn-primary">Purchase Here</a>
-        </div>
-      </div>
-    <div class="card h-100 mx-3" style="width: 16rem;">
-        <img src="..//slimeairpump.jpeg" class="card-img-top" alt="...">
-        <div class="card-body">
-          <h5 class="card-title">Portable Tire Inflator</h5>
-          <p class="card-text">Air pump on the go</p>
-          <a href="https://www.amazon.com/Slime-40050-Inflator-Portable-Compressor/dp/B074X4XFGS/ref=sr_1_15?crid=1MUJQEL7H4SBT&keywords=car+tire+inflator&qid=1636344111&s=automotive&sprefix=car+tire+%2Caps%2C177&sr=1-15" class="btn btn-primary">Purchase Here</a>
-        </div>
-      </div>
-</div>
+
+
     
-   
-        <li>Spare tire <p>One of the most common problems people face with cars is flat tires. Even though they are unavoidable having a spare tire. Before ordering one check in your trunk to see if you have one. O </p> </li>
-        <li>jumper cables</li>
-        <li>tire inflator</li>
-        <li>set with heated blanket</li>
-        <li>AAA or 24hr roadside assistance</li>
-        <li>gas can</li>
-    </ul>
 
-  </section>
-</section>
-</section>
-</section>
+  
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script> 
 </body>
 </html>
