--- a/demoDay copy/views/login.ejs
+++ b/demoDay copy/views/login.ejs
@@ -3,6 +3,7 @@
 <head>
     <title>Clutch Login</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <script src="https://kit.fontawesome.com/8ea013bdc7.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="login.css">
 </head>
 <body>
@@ -17,14 +18,12 @@
                     <div class="card-body p-md-5 mx-md-4">
       
                       <div class="text-center">
-                        <img src="mainPic.svg" style="width: 200px;" alt="logo">
+                        <img src="mainpic.jpg" style="width: 200px;" alt="logo">
                       </div>
       
                       <form action="/login" method="post">
                         <p>Please login to your account</p>
-                        <% if (message.length > 0) { %>
-                            <div class="alert alert-danger"><%= message %></div>
-                        <% } %>
+
       
                         <div class="form-outline mb-4">
                         
@@ -53,8 +52,39 @@
                   </div>
                   <div class="col-lg-6 d-flex align-items-center gradient-custom-2">
                     <div class="text-white px-3 py-4 p-md-5 mx-md-4">
-                      <h1 class="mb-4">Clutch</h1>
-                      <p class="small mb-0">An app to educate yourself on basic car information.</p>
+                      <form action="/login" method="post">
+
+                      <div class="text-center"><i class="fas fa-wrench mechanic"
+                      style="width: 200px;" alt="logo"></i>
+                      </div>
+                        <p>Please login to your account as Mechanic</p>
+
+
+                      <div class="form-outline mb-4">
+                        
+                        <input type="text" class="form-control" name="email">   
+                        <label class="form-label" for="">Email</label>
+                        </div>
+      
+                        <div class="form-outline mb-4">
+                          
+                        <input type="password" class="form-control" name="password">
+                        <label>Password</label>
+                        </div>
+      
+                        <div class="text-center pt-1 mb-5 pb-1">
+                            <button type="submit" class="btn btn-lg">Login</button>
+                        </div>
+      
+                        <div class="d-flex align-items-center justify-content-center pb-4">
+                          <p class="mb-0 me-2">Don't have an account?</p>
+                          <button type="submit" class="btn btn-lg"><a href="/mechanicSignUp">Sign Up</a></button>
+                        </div>
+      
+                      </form>
+    
+      
+                      
                     </div>
                 </div>
               </div>
