--- a/demoDay copy/views/mechanicSignUp.ejs
+++ b/demoDay copy/views/mechanicSignUp.ejs
@@ -17,7 +17,7 @@
     <% } %>
 
     <!-- LOGIN FORM -->
-    <form action="/signup" method="post">
+    <form action="/mechanicsignup" method="post">
         <div class="form-group">
             <label>Email</label>
             <input type="text" class="form-control" name="email">
@@ -35,36 +35,10 @@
             <label>Phone Number</label>
             <input type ="tel" class="form-control" name="cellNumber">
         </div>
-        <div class="form-group">
-            <label>What Year Is Your Car?</label>
-            <input type="text" class="form-control" name="year">
-        </div>
-        <div class="form-group">
-            <label>What Make Is Your Car?</label>
-            <select name="cars" id="make">
-            <option value="volvo">Volvo</option>
-            <option value="saab">Saab</option>
-            <option value="mercedes">Mercedes</option>
-            <option value="audi">Audi</option>
-        </select>
-        </div>
-        <div class="form-group">
-            <label>What Model Is Your Car?</label>
-            <input type="text" class="form-control" name="model">
-        </div>
-        <div class="form-group">
-            <label>How many Miles?</label>
-            <input type="text" class="form-control" name="miles">
-        </div>
-        <div class="form-group">
-            <label>When was the date of your last oil change?</label>
-            <input type="date" class="form-control" name="date">
-        </div>
-        <div class="form-group">
-            <label>How Many Miles were on the car when you received your last oil change?</label>
-            <input type="text" class="form-control" name="lastOilChange">
-        </div>
-        <input type ="hidden" name ="mechanic" value="false">
+
+        <input type ="hidden" name ="mechanic" value="true">
+        
+        
         
         
 
