--- a/demoDay copy/views/resources.ejs
+++ b/demoDay copy/views/resources.ejs
@@ -19,7 +19,7 @@
           <section class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav ms-auto">
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="/">Home</a>
+                <a class="nav-link active" aria-current="page" href="/main">Home</a>
               </li>
               <li class="nav-item">
                 <a href="/resources" class="nav-link">Must Have's</a>
@@ -31,7 +31,7 @@
                 <a href ="lights" class="nav-link">Why did a light on the dashboard appear?</a>
               </li>
               <li class="nav-item">
-                <a href ="/login" class="nav-link" >Login</a>
+                <a href ="/profile" class="nav-link" >Maintenance Log</a>
               </li>
             </ul>
           </section>
